<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_vault"
        android:icon="@drawable/nav_vault"
        android:title="@string/nav_vault" />

    <item
        android:id="@+id/nav_authenticator"
        android:icon="@drawable/nav_codes"
        android:title="@string/nav_codes" />

    <item
        android:id="@+id/nav_security"
        android:icon="@drawable/nav_security"
        android:title="@string/nav_security" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/nav_about"
        android:title="@string/nav_about" />
</menu>
